NVPlay 2.0 is now available.

Release notes:
	* Large refactor of main.c. define exit codes, always call nvplay_shutdown
	* Implemented Windows detection code. It can detect Windows NT, 3.x and 9x. NT is blocked
	* Removed the never used gdbstub 
	* Split nvplay.h into header files for each category of functionality.
	* Implemented BIOS basic "extended" keyboard input library
	* More consistent file naming 
	* Merged command line into core code. Added nvplay_state_t
		* Changed to state enum instead of booleans for run mode
	* Made enum casing UPPER CASE as recommended for C language
	* A script called "autoexec.nvs" is now run automatically if it exists.
	* Scripts can call other scripts with the runscript command 
	* Removed legacy test mode 
		* nvplay.ini no longer stores tests to run in test mode.
		* Dry run and run all tests removed

Old release notes:

NVPlay 1.0 is now available.

Changes:
* Changed version system (since version 0.x will go on forever otherwise)
* Added a "repl" loop that is the new default mode. Run "-test" to run tests. 
	* "?" or "help" at the REPL loop prints help.
	* "q" or "exit" exits.
* Added support for Celsius (NV1x) GPUs (untested!)
* Added HAL system
	* GPUs now store pointers to arrays of function pointers (not C++ yet...) to avoid GPU list having huge numbers of function pointers and to make calling GPU specific functions
	more elegant
* Removed NVS files
* Implemented "generic" tests that are available across every GPU (for some of them, Hal functions are required )
* Commands now store number of parameters and check for them
* Simplified terrible script parsing code
* Simplified terrible config parsing code
* Massively simplify nv_config_test_entry_t (why was I duplicating half of the test information?)
* Added many new commands:
	* Read to console and write PCI config registers 
	* Write CRTC range
	* Read to console and write VGA Sequencer registers
	* Read to console and write VGA GDC registers